# MARS_Backend

./: README.md  ai_invastment_documetation.txt  db.sqlite3  decision_support_report.md  install_log.txt  manage.py  merged_requirements.txt  pyproject.toml  render.yaml  report.md  requirements.txt  structure.txt
data/: categorical_mappings.json  decoded.csv  preprocessed_data.csv
db/: chroma.sqlite3
myapp/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
myapp/AI/Agents/rag_researcher/rag_researcher/: pyproject.toml  qwer.txt  wertyui.docx
myapp/AI/Agents/rag_researcher/rag_researcher/db/: chroma.sqlite3
myapp/AI/Agents/rag_researcher/rag_researcher/src/research/: crew.py  rag_main.py  rag_root.py
myapp/AI/Agents/rag_researcher/rag_researcher/src/research/config/: agents.yaml  tasks.yaml
myapp/AI/Agents/rag_researcher/rag_researcher/src/research/tools/: custom_tool.py  rag_tool_config.py
myapp/AI/Agents/stock_agent/: Company_names_to_invest.txt  README.md  pyproject.toml  report.md
myapp/AI/Agents/stock_agent/src/new_decision_support/: crew.py  stock_main.py  stock_root.py
myapp/AI/Agents/stock_agent/src/new_decision_support/config/: agents.yaml  tasks.yaml
myapp/AI/Agents/stock_agent/src/new_decision_support/tools/: company_researcher_tool.py  plotly_stock_chart_tool.py  stock_performance_tool.py  ticker_lookup_tool.py
myproject/: settings.py  urls.py  wsgi.py
output/: email_body.txt  report.json  report.txt  viz_20250822_144450_Which_team_won_with_the_least_run_margin_in_2016_V.html  (+14 more)
temp/: api_testing_guide.docx
(+49 files in other folders)
