[project]
name = "research"
version = "0.1.0"
description = "latest-ai-development using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
research = "research.main:run"
run_crew = "research.main:run"
train = "research.main:train"
replay = "research.main:replay"
test = "research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
